core/k8s/database-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-service
  template:
    metadata:
      labels:
        app: database-service
    spec:
      containers:
        - name: database-service
          image: matluuk/ds-database-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8011
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  ports:
  type: NodePort
    - port: 8011
      targetPort: 8011
      nodePort: 8011
  selector:
    app: database-service
