core/k8s/file-storage-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-storage-service
  template:
    metadata:
      labels:
        app: file-storage-service
    spec:
      containers:
        - name: file-storage-service
          image: file-storage-service
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: file-storage-service
spec:
  ports:
    - port: 50051
      targetPort: 50051
  selector:
    app: file-storage-service
