core/k8s/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: matluuk/ds-kafka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9093
              name: controller-port
            - containerPort: 7071
              name: metrics-port
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - port: 9093
      targetPort: 9093
      name: controller-port
    - port: 7071
      targetPort: 7071
      name: metrics-port
  selector:
    app: kafka
