core/k8s/request-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-controller
  template:
    metadata:
      labels:
        app: request-controller
    spec:
      containers:
        - name: request-controller
          image: matluuk/ds-request-controller
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: request-controller
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: request-controller
