core/k8s/video-uploader-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-uploader
  template:
    metadata:
      labels:
        app: video-uploader
    spec:
      containers:
        - name: video-uploader
          image: matluuk/ds-video-uploader
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: video-uploader
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: video-uploader
